cargo-features = ["resolver"]

[workspace]
resolver = "2"

members = [
    "src/geonft",
    "src/geonft_web",
    "src/geonft_request",
    "src/geonft_nostd",
    "src/geonft_shared",
    "src/geonft_wasm",
    "src/geonft_solana",
    "src/geonft_sync",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"


