[package]
name = "geonft_nostd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std-errors = []

[dependencies]
base64 = "0.13.0"
sha256 = "1.0.2"
ed25519-dalek = { version = "1.0.1", default-features = false }
bech32 = "0.8.0"
anyhow = { version = "1.0.40", default-features = false }
k256 = { version = "0.8.1", default-features = false, features = ["ecdsa", "sha256", "arithmetic"] }
rand = { version = "0.7.3", default-features = false }
