[package]
name = "geonft_shared"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
serde_json = "1.0.64"

[dependencies.serde]
version = "1.0.125"
features = ["derive"]
