[package]
name = "geonft_shared"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geonft_data = { path = "../geonft_data" }
geonft_nostd = { path = "../geonft_nostd" }

anyhow = "1.0.40"
chrono = "0.4.19"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
