[package]
name = "geonft_solana"
version = "0.1.0"
authors = ["aimeedeer <aimeez@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geonft_nostd = { path = "../geonft_nostd" }

borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "1.6.9"
anyhow = { version = "1.0.40", default-features = false }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend"] }

[dev-dependencies]
solana-program-test = "1.6.9"
solana-sdk = "1.6.9"

[features]
exclude_entrypoint = []

[lib]
name = "geonft_solana"
crate-type = ["cdylib", "lib"]
