[package]
name = "geonft_solana"
version = "0.1.0"
authors = ["aimeedeer <aimeez@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geonft_data = { path = "../geonft_data" }
geonft_nostd = { path = "../geonft_nostd" }

borsh = "0.8.0"
borsh-derive = "0.8.0"
solana-program = "1.6.9"
anyhow = { version = "1.0.40", default-features = false }

[dev-dependencies]
solana-program-test = "1.6.9"
solana-sdk = "1.6.9"

[features]
exclude_entrypoint = []

[lib]
name = "geonft_solana"
crate-type = ["cdylib", "lib"]
