[package]
name = "geonft_sync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geonft_data = { path = "../geonft_data" }
geonft_nostd = { path = "../geonft_nostd" }
geonft_shared = { path = "../geonft_shared" }

borsh = "0.8.0"
anyhow = "1.0.40"
log = "0.4.14"
env_logger = "0.8.3"
solana-sdk = "1.6.9"
solana-client = "1.6.9"
solana-cli-config = "1.6.9"
serde_json = "1.0.64"
dirs = "3.0.2"
ipfs-api = { version = "0.11.0", features = ["with-hyper-rustls"], default-features = false }