[package]
name = "geonft_wasm"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
geonft_nostd = { path = "../geonft_nostd" }
wasm-bindgen = "0.2.74"
base64 = "0.13.0"
sha256 = "1.0.2"
qrcodegen = "1.6.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

bech32 = "0.8.0"
anyhow = { version = "1.0.40", default-features = false }

rand = { version = "0.7.3", default-features = false, features = ["getrandom"] }
getrandom = { version = "0.1.16", features = ["wasm-bindgen"] }
serde = { version =  "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
