[package]
name = "geonft_web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geonft_request = { path = "../geonft_request" }
geonft_nostd = { path = "../geonft_nostd" }
geonft_shared = { path = "../geonft_shared" }

rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
rand = "0.7.3"
bech32 = "0.8.0"
base64 = "0.13.0"
chrono = "0.4.19"
sha256 = "1.0.2"
image = "0.23.14"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[global.limits]
json = 5242880